--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -1,27 +1,3 @@
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    color: #161616;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-family-title);
-}
-
-a {
-    color: #161616;
-}
-
-.visually-hidden {
-    display: none;
-}
-
-.card-category, .section-tagline {
-    color: var(--color-primary)
-}
-
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
@@ -31,4 +7,29 @@ a {
     --text-color: var(--color-black);    
     --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-title);
+}
+
+body {
+    font-family: var(--font-family-base);
+}
+
+body, a {
+    color: var(--text-color)
+}
+
+.visually-hidden {
+    display: none;
+}
+
+.card-category, .section-tagline {
+    color: var(--color-primary)
 }
