--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -167,7 +167,7 @@ a:active {
     margin: var(--section-tagline-margin);
 }
 
-.row {
+ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -176,13 +176,13 @@ a:active {
 .col-1-3 {
     width: 33.33%;
     float: left;
-    padding: 50%;
+    padding: 0.5rem;
 }
 
 .col-1-2 {
     width: 50%;
     float: left;
-    padding: 50%;
+    padding: 0.5rem;
 }
 
 .container {
@@ -198,8 +198,9 @@ a:active {
 .footer-copyright {
     margin: 0;
     font-size: var(--font-size-small);
+    color: var(--text-color);
 }
 
-.footer {
+.footer ul{
     text-align: right;
 }
