Add border radius to images

--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -192,6 +192,10 @@ a:active {
     text-decoration: none;
 }
 
+.card-testimonial {
+    text-align: center;
+}
+
 .card-testimonial .card-avater {
     border-radius: 50%;
     width: 10rem;
