--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -154,7 +154,7 @@ a:active {
     color: var(--nav-item-link-hover);
 }
 
-.nav-link::before {
+.nav .nav-link::before {
     content: '';
     position: absolute;
     top: 0;
